fixed line-height and letter spacing of  body

--- a/styles/sass/partials/_generalStyling.scss
+++ b/styles/sass/partials/_generalStyling.scss
@@ -38,7 +38,9 @@ body {
   font-size: 2rem;
   font-family: $fontPoppins;
   overflow-x: hidden;
-
+  line-height: 1.6;
+  letter-spacing: 1.5px;
+  color:#023d66;
   @include tabletMQ2 {
     overflow-x: hidden;
   }
